# msp430X-emu

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Device.h  DevicesManager.cpp  DevicesManager.h  MSP430.cpp  MSP430.h  MSP430InstructionHelper.cpp  MSP430InstructionHelper.h  MSP430Watchdog.cpp  MSP430Watchdog.h  Memory.cpp  Memory.h  Port.cpp  Port.h  Port1.cpp  Port1.h  Port2.cpp  Port2.h  Port3.cpp  Port3.h  Port4.cpp  Port4.h  Port5.cpp  Port5.h  Port6.cpp  Port6.h  Port7.cpp  Port7.h  Port8.cpp  Port8.h
src/peripherals/: Peripheral.h  Uart.cpp  Uart.h
src/ui/: UI.cpp  UI.h  UserInterfaceIcu.cpp  UserInterfaceIcu.h
tests/replay_ds_script/: EmulatedInstruction.cpp  ReplayDs.cpp  ReplayDs.h
tests/test_utils/: MSP430TestHelper.cpp  MSP430TestHelper.h
tests/unit_tests/: MSP430TestFixture.h  TestDecodeCall.cpp  TestDecodeMov.cpp  TestDecodePushm.cpp  TestDecodeSub.cpp
tools/: README.md  ccs_asm_extractor.js
